@@ -37,6 +37,7 @@ require 'quantified/length'
 require 'net/https'
 require 'active_shipping/lib/error'
 require 'active_shipping/lib/requires_parameters'
+require 'active_shipping/lib/connection'
 require 'active_shipping/lib/posts_data'
 require 'active_shipping/lib/country'
 
